@@ -1,5 +1,14 @@
 CHANGES IN FLTK 1.1.0
 
+	- The pixmap_browser demo didn't check for a NULL image
+	  pointer.
+	- Fl_File_Icon::find() now uses fl_filename_isdir()
+	  under WIN32 to check for directories.
+	- Fl_File_Chooser's preview code called refcount()
+	  on the deleted image's object.
+	- Fixed another problem with the Fl_BMP_Image loader.
+	- The fl_file_chooser() callback was being called with a
+	  NULL filename.
 	- Documented that fl_push_clip() is preferred over
 	  fl_clip(), with a corresponding source change.
 	- Minor changes to the MacOS X event handling code.
